# aml

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.MD  aml  cmake_install.cmake  flake.nix  graphics-project  main.cpp  matricies.hpp  perf.data  perf.data.old  points.hpp
dev-guidelines/: guidelines.md
include/: graphics.hpp  input.hpp  lib.hpp  multiResource.hpp  renderMatrix.hpp  shaderProgram.hpp  shaderResource.hpp  tint.hpp  uniform.hpp  vector3.hpp  vertexResource.hpp  window.hpp
include/Graphics/: defaultShaderResources.hpp  shaderProgram.hpp  uniform.hpp  vectorResource.hpp  vertexResource.hpp
include/Input/: inputCallbacks.hpp  inputReciver.hpp  inputType.hpp  result.hpp
include/LowLevelGraphics/: defaultShaderResources.hpp  shaderProgram.hpp  shaderResource.hpp  texture.hpp  uniform.hpp  vectorResource.hpp  vertex.hpp  vertexResource.hpp  window.hpp
include/LowLevelGraphics/resource/: elementBuffer.hpp  texture.hpp  vectorInclude.hpp  vectorResource.hpp  vertex.hpp  vertexResource.hpp
include/LowLevelGraphics/resource/dataBuffers/: elementBuffer.hpp  shaderStorageBuffer.hpp  uniformBuffer.hpp  vectorResource.hpp  vertexResource.hpp
include/LowLevelGraphics/resource/vector/: vectorInclude.hpp
include/LowLevelGraphics/resource/vector/vectorDataTypes/: vector2.hpp  vector4.hpp
include/LowLevelGraphics/resource/vectors/: vector3.hpp
include/LowLevelGraphics/resource/vertex/: vertex.hpp
include/LowLevelGraphics/shader/: defaultShaderResources.hpp  shaderProgram.hpp  shaderResource.hpp  shaderType.hpp  uniform.hpp
include/LowLevelGraphics/window/: styleManager.hpp  window.hpp
include/LowLevelGraphics/windowUtilities/: styleManager.hpp
include/templateUtilities/: templateLib.hpp
src/: defaultShaders.cpp  inputCallbacks.cpp  inputReciver.cpp  lib.cpp  renderMatrix.cpp  shaderProgram.cpp  shaderResource.cpp  texture.cpp  tint.cpp  uniform.cpp  vectorResource.ipp  vectorResource_IMPLEMENT.hpp  vertexResource_IMPLEMENT.hpp  window.cpp
src/basicShaders/: basicFrag.frag  basicVert.vert
src/inputSrc/: inputCallbacks.cpp  inputReciver.cpp
src/shaderSrc/: defaultShaders.cpp  shaderProgram.cpp  shaderResource.cpp  uniform.cpp
src/windowSrc/: styleManager.cpp  window.cpp
test/: 3dTest  3dTest.cpp  TextureTest  TextureTest.cpp  main.cpp  points.hpp  ssbo.vert  ssboTest.cpp  test
